--- a/client-invoicing-web/pom.xml
+++ b/client-invoicing-web/pom.xml
@@ -2,193 +2,81 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
 
+  <parent>
+    <groupId>org.afrosoft</groupId>
+    <artifactId>client-invoicing</artifactId>
+    <version>1.0-SNAPSHOT</version>
+    <relativePath>../client-invoicing/pom.xml</relativePath>
+  </parent>
+  
    <groupId>org.afrosoft</groupId>
    <artifactId>client-invoicing-web</artifactId>
-   <version>1.0-SNAPSHOT</version>
    <packaging>war</packaging>
    <name>Client invoicing webapp</name>
 
-   <properties>
-      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-      <javaee6.web.spec.version>2.0.0.Final</javaee6.web.spec.version>
-   </properties>
-
-   <dependencyManagement>
-      <dependencies>
-         <!-- JBoss distributes a complete set of Java EE 6 APIs including 
-            a Bill of Materials (BOM). A BOM specifies the versions of a "stack" (or 
-            a collection) of artifacts. We use this here so that we always get the correct 
-            versions of artifacts. Here we use the jboss-javaee-web-6.0 stack (you can 
-            read this as the JBoss stack of the Java EE Web Profile 6 APIs) -->
-        <dependency>
-            <groupId>org.jboss.spec</groupId>
-            <artifactId>jboss-javaee-web-6.0</artifactId>
-            <version>${javaee6.web.spec.version}</version>
-            <type>pom</type>
-            <scope>import</scope>
-        </dependency>
-      </dependencies>
-   </dependencyManagement>
-
    <dependencies>
-
       <dependency>
          <groupId>javax.servlet</groupId>
          <artifactId>javax.servlet-api</artifactId>
-         <version>3.0.1</version>
          <scope>provided</scope>
       </dependency>
-
-      <!-- Import the JPA API, we use provided scope as the API is included in JBoss AS 7 -->
       <dependency>
          <groupId>org.hibernate.javax.persistence</groupId>
          <artifactId>hibernate-jpa-2.0-api</artifactId>
-         <version>1.0.1.Final</version>
          <scope>provided</scope>
       </dependency>
-
       <dependency>
         <groupId>org.hibernate</groupId>
         <artifactId>hibernate-entitymanager</artifactId>
-        <version>4.1.10.Final</version>
         <scope>provided</scope>
       </dependency>
-      
       <dependency>
         <groupId>postgresql</groupId>
         <artifactId>postgresql</artifactId>
-        <version>9.1-901.jdbc4</version>
+        <scope>provided</scope>
       </dependency>
-      
-      <!-- Import the CDI API, we use provided scope as the API is included in JBoss AS 7 -->
-      <!-- <dependency>
-         <groupId>javax.enterprise</groupId>
-         <artifactId>cdi-api</artifactId>
-         <scope>provided</scope>
-      </dependency> -->
-
-      <!-- Import the Common Annotations API (JSR-250), we use provided scope 
-         as the API is included in JBoss AS 7 -->
-      <!-- <dependency>
-         <groupId>org.jboss.spec.javax.annotation</groupId>
-         <artifactId>jboss-annotations-api_1.1_spec</artifactId>
-         <scope>provided</scope>
-      </dependency> -->
-
-      <!-- Import the JAX-RS API, we use provided scope as the API is included in JBoss AS 7 -->
-      <!-- <dependency>
-         <groupId>org.jboss.spec.javax.ws.rs</groupId>
-         <artifactId>jboss-jaxrs-api_1.1_spec</artifactId>
-         <scope>provided</scope>
-      </dependency> -->
-
-      <!-- JSR-303 (Bean Validation) Implementation -->
-      <!-- Provides portable constraints such as @Email -->
-      <!-- Hibernate Validator is shipped in JBoss AS 7 -->
-      <!-- <dependency>
-         <groupId>org.hibernate</groupId>
-         <artifactId>hibernate-validator</artifactId>
-         <version>4.2.0.Final</version>
-         <scope>provided</scope>
-         <exclusions>
-            <exclusion>
-               <groupId>org.slf4j</groupId>
-               <artifactId>slf4j-api</artifactId>
-            </exclusion>
-         </exclusions>
-      </dependency> -->
-
-      <!-- Now we declare any tools needed -->
-      
       <dependency>
         <groupId>commons-lang</groupId>
         <artifactId>commons-lang</artifactId>
-        <version>2.4</version>
         <scope>provided</scope>
       </dependency>
-
-      <!-- Annotation processor to generate the JPA 2.0 metamodel classes 
-         for typesafe criteria queries -->
-      <!-- <dependency>
-         <groupId>org.hibernate</groupId>
-         <artifactId>hibernate-jpamodelgen</artifactId>
-         <version>1.1.1.Final</version>
-         <scope>provided</scope>
-      </dependency> -->
-
-      <!-- <dependency>
-         <groupId>junit</groupId>
-         <artifactId>junit</artifactId>
-         <version>4.10</version>
-         <scope>test</scope>
-      </dependency> -->
+      <dependency>
+        <groupId>commons-collections</groupId>
+        <artifactId>commons-collections</artifactId>
+        <scope>provided</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-api</artifactId>
+        <scope>provided</scope>
+      </dependency>
+      <dependency>
+        <groupId>ch.qos.logback</groupId>
+        <artifactId>logback-core</artifactId>
+        <scope>provided</scope>
+      </dependency>
+      <dependency>
+        <groupId>ch.qos.logback</groupId>
+        <artifactId>logback-classic</artifactId>
+        <scope>provided</scope>
+      </dependency>
    </dependencies>
 
    <build>
       <finalName>${project.artifactId}</finalName>
       <plugins>
          <plugin>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <version>3.0</version>
-            <configuration>
-               <source>1.6</source>
-               <target>1.6</target>
-            </configuration>
-         </plugin>
-         
-         <plugin>
             <artifactId>maven-war-plugin</artifactId>
-            <version>2.3</version>
             <configuration>
                <!-- Java EE 6 doesn't require web.xml, Maven needs to catch up! -->
                <failOnMissingWebXml>false</failOnMissingWebXml>
                <archive>
                  <manifestEntries>
-                   <Dependencies>javaee.api, javax.persistence.api, org.hibernate, org.apache.commons.lang</Dependencies>
+                   <Dependencies>javaee.api, javax.persistence.api, org.postgresql, org.hibernate, org.apache.commons.lang, org.apache.commons.collections, org.slf4j, ch.qos.logback</Dependencies>
                  </manifestEntries>
                </archive>
             </configuration>
          </plugin>
-         
-         <!-- The JBoss AS plugin deploys your war to a local JBoss AS container -->
-         <!-- To use, set the JBOSS_HOME environment variable and run: mvn 
-            package jboss-as:deploy -->
-         <plugin>
-            <groupId>org.jboss.as.plugins</groupId>
-            <artifactId>jboss-as-maven-plugin</artifactId>
-            <!-- <version>7.1.0.Beta1b</version> -->
-            <version>7.3.Final</version>
-         </plugin>
-         
-         <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-eclipse-plugin</artifactId>
-            <version>2.9</version>
-            <configuration>
-               <downloadSources>true</downloadSources>
-               <downloadJavadocs>true</downloadJavadocs>
-            </configuration>
-         </plugin>
       </plugins>
    </build>
-
-   <profiles>
-      <profile>
-         <id>default</id>
-         <activation>
-            <activeByDefault>true</activeByDefault>
-         </activation>
-         <build>
-            <plugins>
-               <plugin>
-                  <artifactId>maven-surefire-plugin</artifactId>
-                  <version>2.14</version>
-                  <configuration>
-                     <skip>true</skip>
-                  </configuration>
-               </plugin>
-            </plugins>
-         </build>
-      </profile>
-   </profiles>
 </project>
