--- a/client-invoicing/pom.xml
+++ b/client-invoicing/pom.xml
@@ -11,11 +11,17 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <javaee6.web.spec.version>2.0.0.Final</javaee6.web.spec.version>
+    <servlet.api.version>3.0.1</servlet.api.version>
     <springframework.version>3.2.0.RELEASE</springframework.version>
     <eclipselink.version>2.4.0</eclipselink.version>
-    <postresql.version>9.1-901.jdbc4</postresql.version>
+    <hibernate.jpa.version>1.0.1.Final</hibernate.jpa.version>
+    <hibernate.entitymanager.version>4.1.10.Final</hibernate.entitymanager.version>
+    <postresql.driver.version>9.1-901.jdbc4</postresql.driver.version>
     <slf4j.version>1.7.2</slf4j.version>
     <logback.version>1.0.9</logback.version>
+    <commons.lang.version>2.4</commons.lang.version>
+    <commons.collections.version>3.2.1</commons.collections.version>
   </properties>
   
   <repositories>
@@ -27,10 +33,23 @@
 
   <modules>
     <module>../client-invoicing-domain</module>
+    <module>../client-invoicing-web</module>
   </modules>
 
   <dependencyManagement>
     <dependencies>
+       <!-- JBoss distributes a complete set of Java EE 6 APIs including 
+          a Bill of Materials (BOM). A BOM specifies the versions of a "stack" (or 
+          a collection) of artifacts. We use this here so that we always get the correct 
+          versions of artifacts. Here we use the jboss-javaee-web-6.0 stack (you can 
+          read this as the JBoss stack of the Java EE Web Profile 6 APIs) -->
+      <dependency>
+          <groupId>org.jboss.spec</groupId>
+          <artifactId>jboss-javaee-web-6.0</artifactId>
+          <version>${javaee6.web.spec.version}</version>
+          <type>pom</type>
+          <scope>import</scope>
+      </dependency>
       <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
@@ -95,13 +114,38 @@
       <dependency>
         <groupId>postgresql</groupId>
         <artifactId>postgresql</artifactId>
-        <version>${postresql.version}</version>
+        <version>${postresql.driver.version}</version>
       </dependency>
-      <!--<dependency>
-        <groupId></groupId>
-        <artifactId></artifactId>
-        <version></version>
-      </dependency>-->
+      <dependency>
+         <groupId>javax.servlet</groupId>
+         <artifactId>javax.servlet-api</artifactId>
+         <version>3.0.1</version>
+      </dependency>
+      <dependency>
+         <groupId>org.hibernate.javax.persistence</groupId>
+         <artifactId>hibernate-jpa-2.0-api</artifactId>
+         <version>1.0.1.Final</version>
+      </dependency>
+      <dependency>
+        <groupId>org.hibernate</groupId>
+        <artifactId>hibernate-entitymanager</artifactId>
+        <version>4.1.10.Final</version>
+      </dependency>
+      <dependency>
+        <groupId>postgresql</groupId>
+        <artifactId>postgresql</artifactId>
+        <version>9.1-901.jdbc4</version>
+      </dependency>
+      <dependency>
+        <groupId>commons-lang</groupId>
+        <artifactId>commons-lang</artifactId>
+        <version>${commons.lang.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>commons-collections</groupId>
+        <artifactId>commons-collections</artifactId>
+        <version>${commons.collections.version}</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
@@ -126,11 +170,18 @@
             <downloadJavadocs>true</downloadJavadocs>
           </configuration>
         </plugin>
-        <!--<plugin>
-          <groupId></groupId>
-          <artifactId></artifactId>
-          <version></version>
-        </plugin>-->
+         <plugin>
+            <artifactId>maven-war-plugin</artifactId>
+            <version>2.3</version>
+         </plugin>
+         <!-- The JBoss AS plugin deploys your war to a local JBoss AS container -->
+         <!-- To use, set the JBOSS_HOME environment variable and run: mvn 
+            package jboss-as:deploy -->
+         <plugin>
+            <groupId>org.jboss.as.plugins</groupId>
+            <artifactId>jboss-as-maven-plugin</artifactId>
+            <version>7.3.Final</version>
+         </plugin>
       </plugins>
     </pluginManagement>
   </build>
