--- a/client-invoicing-web/src/main/webapp/WEB-INF/web.xml
+++ b/client-invoicing-web/src/main/webapp/WEB-INF/web.xml
@@ -21,6 +21,16 @@
       <servlet-class>org.afrosoft.clientinvoicing.web.AddClientServlet</servlet-class>
     </servlet>
     
+    <servlet>
+      <servlet-name>projectsServlet</servlet-name>
+      <servlet-class>org.afrosoft.clientinvoicing.web.ProjectsServlet</servlet-class>
+    </servlet>
+    
+    <servlet>
+      <servlet-name>addProjectServlet</servlet-name>
+      <servlet-class>org.afrosoft.clientinvoicing.web.AddProjectServlet</servlet-class>
+    </servlet>
+    
     <servlet-mapping>
       <servlet-name>clientsServlet</servlet-name>
       <url-pattern>/clients.html</url-pattern>
@@ -34,6 +44,16 @@
     <servlet-mapping>
       <servlet-name>addClientServlet</servlet-name>
       <url-pattern>/add_client.html</url-pattern>
+    </servlet-mapping>
+    
+    <servlet-mapping>
+      <servlet-name>projectsServlet</servlet-name>
+      <url-pattern>/projects.html</url-pattern>
+    </servlet-mapping>
+    
+    <servlet-mapping>
+      <servlet-name>addProjectServlet</servlet-name>
+      <url-pattern>/add_project.html</url-pattern>
     </servlet-mapping>
     
     <welcome-file-list>
