--- a/client-invoicing/pom.xml
+++ b/client-invoicing/pom.xml
@@ -13,6 +13,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <javaee6.web.spec.version>2.0.0.Final</javaee6.web.spec.version>
     <servlet.api.version>3.0.1</servlet.api.version>
+    <jstl.api.version>1.2</jstl.api.version>
     <springframework.version>3.2.0.RELEASE</springframework.version>
     <eclipselink.version>2.4.0</eclipselink.version>
     <hibernate.jpa.version>1.0.1.Final</hibernate.jpa.version>
@@ -22,6 +23,7 @@
     <logback.version>1.0.9</logback.version>
     <commons.lang.version>2.4</commons.lang.version>
     <commons.collections.version>3.2.1</commons.collections.version>
+    <jodatime.version>1.6.2</jodatime.version>
   </properties>
   
   <repositories>
@@ -99,7 +101,7 @@
       <dependency>
         <groupId>joda-time</groupId>
         <artifactId>joda-time</artifactId>
-        <version>2.1</version>
+        <version>${jodatime.version}</version>
       </dependency>
       <dependency>
         <groupId>org.eclipse.persistence</groupId>
@@ -119,22 +121,27 @@
       <dependency>
          <groupId>javax.servlet</groupId>
          <artifactId>javax.servlet-api</artifactId>
-         <version>3.0.1</version>
+         <version>${servlet.api.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>javax.servlet.jsp.jstl</groupId>
+        <artifactId>jstl-api</artifactId>
+        <version>${jstl.api.version}</version>
       </dependency>
       <dependency>
          <groupId>org.hibernate.javax.persistence</groupId>
          <artifactId>hibernate-jpa-2.0-api</artifactId>
-         <version>1.0.1.Final</version>
+         <version>${hibernate.jpa.version}</version>
       </dependency>
       <dependency>
         <groupId>org.hibernate</groupId>
         <artifactId>hibernate-entitymanager</artifactId>
-        <version>4.1.10.Final</version>
+        <version>${hibernate.entitymanager.version}</version>
       </dependency>
       <dependency>
         <groupId>postgresql</groupId>
         <artifactId>postgresql</artifactId>
-        <version>9.1-901.jdbc4</version>
+        <version>${postresql.driver.version}</version>
       </dependency>
       <dependency>
         <groupId>commons-lang</groupId>
