--- a/client-invoicing-web/pom.xml
+++ b/client-invoicing-web/pom.xml
@@ -9,85 +9,90 @@
     <relativePath>../client-invoicing/pom.xml</relativePath>
   </parent>
   
-   <groupId>org.afrosoft</groupId>
-   <artifactId>client-invoicing-web</artifactId>
-   <packaging>war</packaging>
-   <name>Client invoicing webapp</name>
+  <groupId>org.afrosoft</groupId>
+  <artifactId>client-invoicing-web</artifactId>
+  <packaging>war</packaging>
+  <name>Client invoicing webapp</name>
 
-   <dependencies>
-      <dependency>
-         <groupId>javax.servlet</groupId>
-         <artifactId>javax.servlet-api</artifactId>
-         <scope>provided</scope>
-      </dependency>
-      <dependency>
-        <groupId>javax.servlet.jsp.jstl</groupId>
-        <artifactId>jstl-api</artifactId>
-        <scope>provided</scope>
-      </dependency>
-      <dependency>
-         <groupId>org.hibernate.javax.persistence</groupId>
-         <artifactId>hibernate-jpa-2.0-api</artifactId>
-         <scope>provided</scope>
-      </dependency>
-      <dependency>
-        <groupId>org.hibernate</groupId>
-        <artifactId>hibernate-entitymanager</artifactId>
-        <scope>provided</scope>
-      </dependency>
-      <dependency>
-        <groupId>postgresql</groupId>
-        <artifactId>postgresql</artifactId>
-        <scope>provided</scope>
-      </dependency>
-      <dependency>
-        <groupId>joda-time</groupId>
-        <artifactId>joda-time</artifactId>
-        <scope>provided</scope>
-      </dependency>
-      <dependency>
-        <groupId>commons-lang</groupId>
-        <artifactId>commons-lang</artifactId>
-        <scope>provided</scope>
-      </dependency>
-      <dependency>
-        <groupId>commons-collections</groupId>
-        <artifactId>commons-collections</artifactId>
-        <scope>provided</scope>
-      </dependency>
-      <dependency>
-        <groupId>org.slf4j</groupId>
-        <artifactId>slf4j-api</artifactId>
-        <scope>provided</scope>
-      </dependency>
-      <dependency>
-        <groupId>ch.qos.logback</groupId>
-        <artifactId>logback-core</artifactId>
-        <scope>provided</scope>
-      </dependency>
-      <dependency>
-        <groupId>ch.qos.logback</groupId>
-        <artifactId>logback-classic</artifactId>
-        <scope>provided</scope>
-      </dependency>
-   </dependencies>
+  <dependencies>
+    <dependency>
+      <groupId>org.afrosoft</groupId>
+      <artifactId>client-invoicing-domain</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <scope>provided</scope>
+    </dependency>
+     <dependency>
+       <groupId>javax.servlet.jsp.jstl</groupId>
+       <artifactId>jstl-api</artifactId>
+       <scope>provided</scope>
+     </dependency>
+     <dependency>
+       <groupId>org.hibernate.javax.persistence</groupId>
+       <artifactId>hibernate-jpa-2.0-api</artifactId>
+       <scope>provided</scope>
+     </dependency>
+     <dependency>
+       <groupId>org.hibernate</groupId>
+       <artifactId>hibernate-entitymanager</artifactId>
+       <scope>provided</scope>
+     </dependency>
+     <dependency>
+       <groupId>postgresql</groupId>
+       <artifactId>postgresql</artifactId>
+       <scope>provided</scope>
+     </dependency>
+     <dependency>
+       <groupId>joda-time</groupId>
+       <artifactId>joda-time</artifactId>
+       <scope>provided</scope>
+     </dependency>
+     <dependency>
+       <groupId>commons-lang</groupId>
+       <artifactId>commons-lang</artifactId>
+       <scope>provided</scope>
+     </dependency>
+     <dependency>
+       <groupId>commons-collections</groupId>
+       <artifactId>commons-collections</artifactId>
+       <scope>provided</scope>
+     </dependency>
+     <dependency>
+       <groupId>org.slf4j</groupId>
+       <artifactId>slf4j-api</artifactId>
+       <scope>provided</scope>
+     </dependency>
+     <dependency>
+       <groupId>ch.qos.logback</groupId>
+       <artifactId>logback-core</artifactId>
+       <scope>provided</scope>
+     </dependency>
+     <dependency>
+       <groupId>ch.qos.logback</groupId>
+       <artifactId>logback-classic</artifactId>
+       <scope>provided</scope>
+     </dependency>
+  </dependencies>
 
-   <build>
-      <finalName>${project.artifactId}</finalName>
-      <plugins>
-         <plugin>
-            <artifactId>maven-war-plugin</artifactId>
-            <configuration>
-               <!-- Java EE 6 doesn't require web.xml, Maven needs to catch up! -->
-               <failOnMissingWebXml>false</failOnMissingWebXml>
-               <archive>
-                 <manifestEntries>
-                   <Dependencies>javaee.api, javax.persistence.api, javax.servlet.jstl.api, org.postgresql, org.hibernate, org.apache.commons.lang, org.apache.commons.collections, org.slf4j, ch.qos.logback, org.joda.time</Dependencies>
-                 </manifestEntries>
-               </archive>
-               <packagingExcludes>WEB-INF/*.tld</packagingExcludes>
-            </configuration>
-         </plugin>
-      </plugins>
-   </build>
+  <build>
+     <finalName>${project.artifactId}</finalName>
+     <plugins>
+        <plugin>
+           <artifactId>maven-war-plugin</artifactId>
+           <configuration>
+              <!-- Java EE 6 doesn't require web.xml, Maven needs to catch up! -->
+              <failOnMissingWebXml>false</failOnMissingWebXml>
+              <archive>
+                <manifestEntries>
+                  <Dependencies>javaee.api, javax.persistence.api, javax.servlet.jstl.api, org.postgresql, org.hibernate, org.apache.commons.lang, org.apache.commons.collections, org.slf4j, ch.qos.logback, org.joda.time</Dependencies>
+                </manifestEntries>
+              </archive>
+              <packagingExcludes>WEB-INF/*.tld</packagingExcludes>
+           </configuration>
+        </plugin>
+     </plugins>
+  </build>
 </project>
