--- a/client-invoicing/pom.xml
+++ b/client-invoicing/pom.xml
@@ -15,23 +15,23 @@
     <servlet.api.version>3.0.1</servlet.api.version>
     <jstl.api.version>1.2</jstl.api.version>
     <springframework.version>3.2.0.RELEASE</springframework.version>
-    <eclipselink.version>2.4.0</eclipselink.version>
+    <!-- <eclipselink.version>2.4.0</eclipselink.version> -->
     <hibernate.jpa.version>1.0.1.Final</hibernate.jpa.version>
     <hibernate.entitymanager.version>4.1.10.Final</hibernate.entitymanager.version>
     <postresql.driver.version>9.1-901.jdbc4</postresql.driver.version>
-    <slf4j.version>1.7.2</slf4j.version>
+    <slf4j.version>1.6.1</slf4j.version>
     <logback.version>1.0.9</logback.version>
     <commons.lang.version>2.4</commons.lang.version>
     <commons.collections.version>3.2.1</commons.collections.version>
     <jodatime.version>1.6.2</jodatime.version>
   </properties>
   
-  <repositories>
+  <!-- <repositories>
     <repository>
       <id>EclipseLink</id>
       <url>http://download.eclipse.org/rt/eclipselink/maven.repo</url>
     </repository>
-  </repositories>
+  </repositories> -->
 
   <modules>
     <module>../client-invoicing-domain</module>
@@ -103,7 +103,7 @@
         <artifactId>joda-time</artifactId>
         <version>${jodatime.version}</version>
       </dependency>
-      <dependency>
+      <!-- <dependency>
         <groupId>org.eclipse.persistence</groupId>
         <artifactId>javax.persistence</artifactId>
         <version>2.0.0</version>
@@ -112,7 +112,7 @@
         <groupId>org.eclipse.persistence</groupId>
         <artifactId>org.eclipse.persistence.jpa</artifactId>
         <version>${eclipselink.version}</version>
-      </dependency>
+      </dependency> -->
       <dependency>
         <groupId>postgresql</groupId>
         <artifactId>postgresql</artifactId>
