--- a/client-invoicing-web/pom.xml
+++ b/client-invoicing-web/pom.xml
@@ -21,6 +21,11 @@
       <version>${project.version}</version>
     </dependency>
     <dependency>
+      <groupId>org.afrosoft</groupId>
+      <artifactId>client-invoicing-service</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>javax.servlet-api</artifactId>
       <scope>provided</scope>
@@ -66,6 +71,11 @@
        <scope>provided</scope>
      </dependency>
      <dependency>
+       <groupId>org.slf4j</groupId>
+       <artifactId>slf4j-api</artifactId>
+       <scope>provided</scope>
+     </dependency>
+     <dependency>
        <groupId>ch.qos.logback</groupId>
        <artifactId>logback-core</artifactId>
        <scope>provided</scope>
@@ -75,6 +85,10 @@
        <artifactId>logback-classic</artifactId>
        <scope>provided</scope>
      </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-web</artifactId>
+    </dependency>
   </dependencies>
 
   <build>
@@ -87,7 +101,7 @@
               <failOnMissingWebXml>false</failOnMissingWebXml>
               <archive>
                 <manifestEntries>
-                  <Dependencies>javaee.api, javax.persistence.api, javax.servlet.jstl.api, org.postgresql, org.hibernate, org.apache.commons.lang, org.apache.commons.collections, org.slf4j, ch.qos.logback, org.joda.time</Dependencies>
+                  <Dependencies>javaee.api, javax.persistence.api, javax.servlet.jstl.api, org.postgresql, org.hibernate, org.apache.commons.lang, org.apache.commons.collections, org.slf4j, org.slf4j.jcl-over-slf4j, ch.qos.logback, org.joda.time</Dependencies>
                 </manifestEntries>
               </archive>
               <packagingExcludes>WEB-INF/*.tld</packagingExcludes>
