--- a/client-invoicing-web/src/main/webapp/WEB-INF/web.xml
+++ b/client-invoicing-web/src/main/webapp/WEB-INF/web.xml
@@ -4,65 +4,80 @@
   xsi:schemaLocation="http://java.sun.com/xml/ns/javaee 
     http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
     
-    <description>A webapp to manage the client invoicing app</description>
+  <description>A webapp to manage the client invoicing app</description>
     
-    <servlet>
-      <servlet-name>clientsServlet</servlet-name>
-      <servlet-class>org.afrosoft.clientinvoicing.web.ClientsServlet</servlet-class>
-    </servlet>
+	<context-param>
+	  <param-name>contextConfigLocation</param-name>
+	  <param-value>/WEB-INF/config/applicationContext.xml</param-value>
+	</context-param>
+
+	<listener>
+		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+	</listener>
+  
+  <servlet>
+    <servlet-name>clientRequestHandler</servlet-name>
+    <servlet-class>org.springframework.web.context.support.HttpRequestHandlerServlet</servlet-class>
+  </servlet>
     
-    <servlet>
-      <servlet-name>editClientServlet</servlet-name>
-      <servlet-class>org.afrosoft.clientinvoicing.web.EditClientServlet</servlet-class>
-    </servlet>
-    
-    <servlet>
-      <servlet-name>addClientServlet</servlet-name>
-      <servlet-class>org.afrosoft.clientinvoicing.web.AddClientServlet</servlet-class>
-    </servlet>
-    
-    <servlet>
-      <servlet-name>projectsServlet</servlet-name>
-      <servlet-class>org.afrosoft.clientinvoicing.web.ProjectsServlet</servlet-class>
-    </servlet>
-    
-    <servlet>
-      <servlet-name>addProjectServlet</servlet-name>
-      <servlet-class>org.afrosoft.clientinvoicing.web.AddProjectServlet</servlet-class>
-    </servlet>
-    
-    <servlet-mapping>
-      <servlet-name>clientsServlet</servlet-name>
-      <url-pattern>/clients.html</url-pattern>
-    </servlet-mapping>
-    
-    <servlet-mapping>
-      <servlet-name>editClientServlet</servlet-name>
-      <url-pattern>/edit_client.html</url-pattern>
-    </servlet-mapping>
-    
-    <servlet-mapping>
-      <servlet-name>addClientServlet</servlet-name>
-      <url-pattern>/add_client.html</url-pattern>
-    </servlet-mapping>
-    
-    <servlet-mapping>
-      <servlet-name>projectsServlet</servlet-name>
-      <url-pattern>/projects.html</url-pattern>
-    </servlet-mapping>
-    
-    <servlet-mapping>
-      <servlet-name>addProjectServlet</servlet-name>
-      <url-pattern>/add_project.html</url-pattern>
-    </servlet-mapping>
-    
-    <welcome-file-list>
-      <welcome-file>index.html</welcome-file>
-    </welcome-file-list>
-    
-    <error-page>
-      <exception-type>java.lang.Exception</exception-type>
-      <location>/WEB-INF/jsp/error.jsp</location>
-    </error-page>
+  <!-- <servlet>
+    <servlet-name>clientsServlet</servlet-name>
+    <servlet-class>org.afrosoft.clientinvoicing.web.ClientsServlet</servlet-class>
+  </servlet> -->
+  
+  <servlet>
+    <servlet-name>editClientServlet</servlet-name>
+    <servlet-class>org.afrosoft.clientinvoicing.web.EditClientServlet</servlet-class>
+  </servlet>
+  
+  <servlet>
+    <servlet-name>addClientServlet</servlet-name>
+    <servlet-class>org.afrosoft.clientinvoicing.web.AddClientServlet</servlet-class>
+  </servlet>
+  
+  <servlet>
+    <servlet-name>projectsServlet</servlet-name>
+    <servlet-class>org.afrosoft.clientinvoicing.web.ProjectsServlet</servlet-class>
+  </servlet>
+  
+  <servlet>
+    <servlet-name>addProjectServlet</servlet-name>
+    <servlet-class>org.afrosoft.clientinvoicing.web.AddProjectServlet</servlet-class>
+  </servlet>
+  
+  <servlet-mapping>
+    <!-- <servlet-name>clientsServlet</servlet-name> -->
+    <servlet-name>clientRequestHandler</servlet-name>
+    <url-pattern>/clients.html</url-pattern>
+  </servlet-mapping>
+  
+  <servlet-mapping>
+    <servlet-name>editClientServlet</servlet-name>
+    <url-pattern>/edit_client.html</url-pattern>
+  </servlet-mapping>
+  
+  <servlet-mapping>
+    <servlet-name>addClientServlet</servlet-name>
+    <url-pattern>/add_client.html</url-pattern>
+  </servlet-mapping>
+  
+  <servlet-mapping>
+    <servlet-name>projectsServlet</servlet-name>
+    <url-pattern>/projects.html</url-pattern>
+  </servlet-mapping>
+  
+  <servlet-mapping>
+    <servlet-name>addProjectServlet</servlet-name>
+    <url-pattern>/add_project.html</url-pattern>
+  </servlet-mapping>
+  
+  <welcome-file-list>
+    <welcome-file>index.html</welcome-file>
+  </welcome-file-list>
+  
+  <error-page>
+    <exception-type>java.lang.Exception</exception-type>
+    <location>/WEB-INF/jsp/error.jsp</location>
+  </error-page>
     
 </web-app>
