--- a/client-invoicing/pom.xml
+++ b/client-invoicing/pom.xml
@@ -15,9 +15,8 @@
     <servlet.api.version>3.0.1</servlet.api.version>
     <jstl.api.version>1.2</jstl.api.version>
     <springframework.version>3.2.0.RELEASE</springframework.version>
-    <!-- <eclipselink.version>2.4.0</eclipselink.version> -->
     <hibernate.jpa.version>1.0.1.Final</hibernate.jpa.version>
-    <hibernate.entitymanager.version>4.1.10.Final</hibernate.entitymanager.version>
+    <hibernate.entitymanager.version>4.0.0.CR2</hibernate.entitymanager.version>
     <postresql.driver.version>9.1-901.jdbc4</postresql.driver.version>
     <slf4j.version>1.6.1</slf4j.version>
     <logback.version>1.0.9</logback.version>
@@ -25,16 +24,10 @@
     <commons.collections.version>3.2.1</commons.collections.version>
     <jodatime.version>1.6.2</jodatime.version>
   </properties>
-  
-  <!-- <repositories>
-    <repository>
-      <id>EclipseLink</id>
-      <url>http://download.eclipse.org/rt/eclipselink/maven.repo</url>
-    </repository>
-  </repositories> -->
 
   <modules>
     <module>../client-invoicing-domain</module>
+    <module>../client-invoicing-service</module>
     <module>../client-invoicing-web</module>
   </modules>
 
@@ -80,12 +73,47 @@
       </dependency>
       <dependency>
         <groupId>org.springframework</groupId>
+        <artifactId>spring-web</artifactId>
+        <version>${springframework.version}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+          </exclusion>
+        </exclusions>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-orm</artifactId>
+        <version>${springframework.version}</version>
+        <exclusions>
+          <exclusion>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+          </exclusion>
+          <exclusion>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+          </exclusion>
+        </exclusions>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
         <artifactId>spring-webmvc</artifactId>
         <version>${springframework.version}</version>
       </dependency>
       <dependency>
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-api</artifactId>
+        <version>${slf4j.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>jcl-over-slf4j</artifactId>
         <version>${slf4j.version}</version>
       </dependency>
       <dependency>
@@ -103,16 +131,6 @@
         <artifactId>joda-time</artifactId>
         <version>${jodatime.version}</version>
       </dependency>
-      <!-- <dependency>
-        <groupId>org.eclipse.persistence</groupId>
-        <artifactId>javax.persistence</artifactId>
-        <version>2.0.0</version>
-      </dependency>
-      <dependency>
-        <groupId>org.eclipse.persistence</groupId>
-        <artifactId>org.eclipse.persistence.jpa</artifactId>
-        <version>${eclipselink.version}</version>
-      </dependency> -->
       <dependency>
         <groupId>postgresql</groupId>
         <artifactId>postgresql</artifactId>
