--- a/client-invoicing-repository/pom.xml
+++ b/client-invoicing-repository/pom.xml
@@ -10,10 +10,10 @@
   </parent>
   
   <groupId>org.afrosoft</groupId>
-  <artifactId>client-invoicing-service</artifactId>
+  <artifactId>client-invoicing-repository</artifactId>
   <packaging>jar</packaging>
 
-  <name>client-invoicing-service</name>
+  <name>client-invoicing-repository</name>
 
   <dependencies>
     <dependency>
@@ -22,13 +22,16 @@
       <version>${project.version}</version>
     </dependency>
     <dependency>
-      <groupId>org.afrosoft</groupId>
-      <artifactId>client-invoicing-repository</artifactId>
-      <version>${project.version}</version>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context</artifactId>
     </dependency>
     <dependency>
       <groupId>org.springframework</groupId>
-      <artifactId>spring-context</artifactId>
+      <artifactId>spring-orm</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-test</artifactId>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
