--- a/client-invoicing-web/src/main/webapp/WEB-INF/web.xml
+++ b/client-invoicing-web/src/main/webapp/WEB-INF/web.xml
@@ -10,6 +10,11 @@
 	  <param-name>contextConfigLocation</param-name>
 	  <param-value>/WEB-INF/config/applicationContext.xml</param-value>
 	</context-param>
+	
+	<context-param>
+	  <param-name>spring.profiles.active</param-name>
+	  <param-value>production</param-value>
+	</context-param>
 
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
