--- a/client-invoicing/pom.xml
+++ b/client-invoicing/pom.xml
@@ -227,4 +227,10 @@
       </plugins>
     </pluginManagement>
   </build>
+  
+  <developers>
+    <developer>
+      <name>Kelechi Chima</name>
+    </developer>
+  </developers>
 </project>
