--- a/client-invoicing/pom.xml
+++ b/client-invoicing/pom.xml
@@ -27,7 +27,7 @@
 
   <modules>
     <module>../client-invoicing-domain</module>
-    <module>../client-invoicing-repository</module>
+    <module>../client-invoicing-dao</module>
     <module>../client-invoicing-service</module>
     <module>../client-invoicing-web</module>
   </modules>
