--- a/client-invoicing-dao/pom.xml
+++ b/client-invoicing-dao/pom.xml
@@ -51,5 +51,10 @@
       <artifactId>junit</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>commons-dbcp</groupId>
+      <artifactId>commons-dbcp</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 </project>
