--- a/client-invoicing/pom.xml
+++ b/client-invoicing/pom.xml
@@ -22,6 +22,7 @@
     <logback.version>1.0.9</logback.version>
     <commons.lang.version>2.4</commons.lang.version>
     <commons.collections.version>3.2.1</commons.collections.version>
+    <commons.dbcp.version>1.4</commons.dbcp.version>
     <jodatime.version>1.6.2</jodatime.version>
   </properties>
 
@@ -182,6 +183,11 @@
         <groupId>commons-collections</groupId>
         <artifactId>commons-collections</artifactId>
         <version>${commons.collections.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>commons-dbcp</groupId>
+        <artifactId>commons-dbcp</artifactId>
+        <version>${commons.dbcp.version}</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
